2006-05-20  Jim Evins  <evins@snaught.com>

	* src/ui-commands.c: (gl_ui_cmd_view_grid_toggle),
	(gl_ui_cmd_view_markup_toggle):
		Fixed crash when grid or markup have been toggled off during
		a previous session.  Bug #1434324.

2006-04-05  Jim Evins  <evins@snaught.com>

	* src/object-editor.c: (gl_object_editor_set_key_names):
		Fixed potential crash when freeing empty key list.

2006-03-11  Jim Evins  <evins@snaught.com>

	* src/print.c: (draw_text_object):
	* src/view-text.c: (gl_view_text_new),
	(construct_properties_editor), (update_object_from_editor_cb),
	(update_editor_from_object_cb), (update_editor_from_label_cb),
	(draw_hacktext):
		Added shadow support to text object.
	
2006-02-18  Jim Evins  <evins@snaught.com>

	* src/print.c: (draw_line_object):
	* src/view-line.c: (gl_view_line_new),
	(construct_properties_editor), (update_canvas_item_from_object_cb),
	(update_object_from_editor_cb), (update_editor_from_object_cb),
	(update_editor_from_label_cb):
		Added shadow support to line object.

2006-02-16  Jim Evins  <evins@snaught.com>

	* src/view-box.c:
		Comment changes.
	* src/print.c: (draw_ellipse_object):
	* src/view-ellipse.c: (gl_view_ellipse_new),
	(construct_properties_editor), (update_canvas_item_from_object_cb),
	(update_object_from_editor_cb), (update_editor_from_object_cb),
	(update_editor_from_label_cb):
		Added shadow support to ellipse object.

2006-02-15  Jim Evins  <evins@snaught.com>

	* src/label-object.c:
		Changed default shadow offsets.
	* src/view-box.c: (gl_view_box_new):
		Simplified gl_view_box_new() so that is does not duplicate code
		in update_canvas_item_from_object_cb().

2006-02-07  Jim Evins  <evins@snaught.com>

	* data/glade/object-editor.glade:
		Fixed color groups of color combos.
	* src/color.h:
		Added default shadow color.
	* src/object-editor.c: (gl_object_editor_construct_color_combo):
		Added shadow color group.

2006-02-06  Jim Evins  <evins@snaught.com>

	* src/object-editor-shadow-page.c: